--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "firebase": "7.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-web": "~0.13.12",
+    "@react-native-community/async-storage": "~1.12.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
